switch has_many outcome_results from quiz_submission to question. wrap saving of outcome_results in transaction. fix minor issues

--- a/app/assets/stylesheets/quiz_submissions.css.scss
+++ b/app/assets/stylesheets/quiz_submissions.css.scss
@@ -63,6 +63,6 @@
   }
 }
 
-.today-act-link{
+.quiz-submission-link{
   margin-bottom: 10px;
 }
